# account-analytic

./: .copier-answers.yml  README.md
.github/workflows/: test.yml
account_analytic_distribution_manual/i18n/: fr.po  it.po
account_analytic_document_date/: README.rst  __manifest__.py
account_analytic_document_date/i18n/: ca.po  es.po  it.po
account_analytic_organization/: README.rst  __manifest__.py
account_analytic_tag/: README.rst  __manifest__.py
account_analytic_tag/i18n/: fr.po
account_move_update_analytic/i18n/: hr.po
analytic_base_department/: README.rst
analytic_sale_info/: README.rst  __init__.py  __manifest__.py  exceptions.py  hooks.py
analytic_sale_info/controllers/: main.py
analytic_sale_info/data/: model_name_data.xml
analytic_sale_info/demo/: assets.xml  model_name_demo.xml
analytic_sale_info/models/: account_analytic_line.py
analytic_sale_info/report/: report_name.py
analytic_sale_info/security/: some_model_security.xml
analytic_sale_info/templates/: website.xml
analytic_sale_info/tests/: __init__.py  test_abstract_something.py  test_something.py
analytic_sale_info/views/: model_name_view.xml  report_name.xml
analytic_sale_info/wizards/: wizard_model.py  wizard_model_view.xml
analytic_tag_dimension/i18n/: da.po
hr_timesheet_analytic_tag/: README.rst
pos_analytic_by_config/: README.rst
product_analytic_sale/i18n/: it.po
purchase_analytic/: README.rst
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
stock_analytic/: README.rst
stock_analytic/i18n/: it.po
stock_picking_analytic/i18n/: it.po
(+16 files in other folders)
