[project]
name = "odoo-addons-oca-account-analytic"
version = "18.0.20241126.1"
dependencies = [
    "odoo-addon-account_analytic_parent==18.0.*",
    "odoo-addon-account_analytic_tag==18.0.*",
    "odoo-addon-hr_timesheet_analytic_tag==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
